# rp2040-rust

./: Cargo.toml  README.md
0_template/: Cargo.toml
0_template/src/: main.rs
0_template/src/builder/: mod.rs  servo_builder.rs
0_template/src/resources/: gpio_list.rs
1_robotic-arm/: Cargo.toml
1_robotic-arm/src/: main.rs
1_robotic-arm/src/builder/: servo_pio_builder.rs
1_robotic-arm/src/resources/: gpio_list.rs
1_robotic-arm/src/tasks/: fade.rs  mod.rs  servo_pio.rs
2_uart-test/src/: main.rs
2_uart-test/src/builder/: mod.rs  servo_pio_builder.rs
2_uart-test/src/tasks/: servo.rs
template/: Cargo.toml
template/src/: main.rs
template/src/builder/: ServoBuilder.rs  mod.rs  servo_builder.rs
template/src/resources/: gpio_list.rs
template/src/tasks/: fade.rs  mod.rs  servo.rs
