[package]
edition = "2021"
name = "rp2040-embassy-rust-template"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt"
] }

embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt"
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-98304", 
    "arch-cortex-m", 
    "executor-thread", 
    "executor-interrupt", 
    "defmt", 
    "integrated-timers"
] }

embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt", 
    "defmt-timestamp-uptime"
] }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt", 
    "unstable-pac", 
    "time-driver", 
    "critical-section-impl", 
    "rp2040"
] }

embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt"
] }

embassy-net = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt", 
    "tcp", 
    "udp", 
    "raw", 
    "dhcpv4", 
    "medium-ethernet", 
    "dns", 
    "proto-ipv4", 
    "proto-ipv6",
    "multicast"
] }

embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt"
] }

embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }

cyw43 = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt", 
    "firmware-logs", 
    "bluetooth"
] }

cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt"
] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.8.1"
rand_core = "0.6.4"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"

bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
